# mpc_controller

./: .gitignore  CMakeLists.txt  README.md  install_prerequisites.sh  package.xml
config/: controller_params.yaml  testing_plan  wbc_logging.perspective
include/: wbc_state_machine_params.hpp
include/c_generated_code/: CMakeLists.txt  Makefile  acados_mex_create_fr_leg_pos.c  acados_mex_create_fr_leg_pos.mexa64  acados_mex_free_fr_leg_pos.c  acados_mex_free_fr_leg_pos.mexa64  acados_mex_set_fr_leg_pos.c  acados_mex_set_fr_leg_pos.mexa64  acados_mex_solve_fr_leg_pos.c  acados_mex_solve_fr_leg_pos.mexa64  acados_sim_solver_fr_leg_pos.c  acados_sim_solver_fr_leg_pos.h  acados_sim_solver_sfunction_fr_leg_pos.c  acados_solver_fr_leg_pos.c  acados_solver_fr_leg_pos.h  acados_solver_sfunction_fr_leg_pos.c  fr_leg_pos_mex_solver.m  main_fr_leg_pos.c  main_mex_fr_leg_pos.c  main_sim_fr_leg_pos.c  make_main_mex_fr_leg_pos.m  make_mex_fr_leg_pos.m  make_sfun.m  make_sfun_sim.m
include/c_generated_code/fr_leg_pos_constraints/: fr_leg_pos_constr_h_e_fun.c  fr_leg_pos_constr_h_e_fun_jac_uxt_zt.c  fr_leg_pos_constr_h_e_fun_jac_uxt_zt_hess.c  fr_leg_pos_constr_h_fun.c  fr_leg_pos_constr_h_fun_jac_uxt_zt.c  fr_leg_pos_constr_h_fun_jac_uxt_zt_hess.c  fr_leg_pos_constraints.h
include/c_generated_code/fr_leg_pos_cost/: fr_leg_pos_cost.h
include/c_generated_code/fr_leg_pos_model/: fr_leg_pos_dyn_disc_phi_fun.c  fr_leg_pos_dyn_disc_phi_fun_jac.c  fr_leg_pos_model.h
include/c_generated_code_SRBD/: CMakeLists.txt  Makefile  SRBD_mex_solver.m  acados_mex_create_SRBD.c  acados_mex_create_SRBD.mexa64  acados_mex_free_SRBD.c  acados_mex_free_SRBD.mexa64  acados_mex_set_SRBD.c  acados_mex_set_SRBD.mexa64  acados_mex_solve_SRBD.c  acados_mex_solve_SRBD.mexa64  acados_sim_solver_SRBD.c  acados_sim_solver_SRBD.h  acados_sim_solver_sfunction_SRBD.c  acados_sim_solver_sfunction_SRBD.mexa64  acados_solver_SRBD.c  acados_solver_SRBD.h  acados_solver_sfunction_SRBD.c  acados_solver_sfunction_SRBD.mexa64  main_SRBD.c  main_mex_SRBD.c  main_sim_SRBD.c  make_main_mex_SRBD.m  make_mex_SRBD.m  make_sfun.m  make_sfun_sim.m
include/c_generated_code_SRBD/SRBD_constraints/: SRBD_constr_h_e_fun.c  SRBD_constr_h_e_fun_jac_uxt_zt.c  SRBD_constr_h_e_fun_jac_uxt_zt_hess.c  SRBD_constraints.h
include/c_generated_code_SRBD/SRBD_cost/: SRBD_cost.h  SRBD_cost_y_0_fun.c  SRBD_cost_y_0_fun_jac_ut_xt.c  SRBD_cost_y_0_hess.c  SRBD_cost_y_e_fun.c  SRBD_cost_y_e_fun_jac_ut_xt.c  SRBD_cost_y_e_hess.c  SRBD_cost_y_fun.c  SRBD_cost_y_fun_jac_ut_xt.c  SRBD_cost_y_hess.c
include/c_generated_code_SRBD/SRBD_model/: SRBD_expl_ode_fun.c  SRBD_expl_ode_hess.c  SRBD_expl_vde_adj.c  SRBD_expl_vde_forw.c  SRBD_model.h
include/c_generated_code_leg/: CMakeLists.txt  Makefile  acados_mex_create_fr_leg_torque.c  acados_mex_create_fr_leg_torque.mexa64  acados_mex_free_fr_leg_torque.c  acados_mex_free_fr_leg_torque.mexa64  acados_mex_set_fr_leg_torque.c  acados_mex_set_fr_leg_torque.mexa64  acados_mex_solve_fr_leg_torque.c  acados_mex_solve_fr_leg_torque.mexa64  acados_sim_solver_fr_leg_torque.c  acados_sim_solver_fr_leg_torque.h  acados_sim_solver_sfunction_fr_leg_torque.c  acados_sim_solver_sfunction_fr_leg_torque.mexa64  acados_solver_fr_leg_torque.c  acados_solver_fr_leg_torque.h  acados_solver_sfunction_fr_leg_torque.c  acados_solver_sfunction_fr_leg_torque.mexa64  fr_leg_torque_mex_solver.m  main_fr_leg_torque.c  main_mex_fr_leg_torque.c  main_sim_fr_leg_torque.c  make_main_mex_fr_leg_torque.m  make_mex_fr_leg_torque.m  make_sfun.m  make_sfun_sim.m
include/c_generated_code_leg/fr_leg_torque_constraints/: fr_leg_torque_constr_h_e_fun.c  fr_leg_torque_constr_h_e_fun_jac_uxt_zt.c  fr_leg_torque_constr_h_e_fun_jac_uxt_zt_hess.c  fr_leg_torque_constr_h_fun.c  fr_leg_torque_constr_h_fun_jac_uxt_zt.c  fr_leg_torque_constr_h_fun_jac_uxt_zt_hess.c  fr_leg_torque_constraints.h
include/c_generated_code_leg/fr_leg_torque_cost/: fr_leg_torque_cost.h  fr_leg_torque_cost_y_0_fun.c  fr_leg_torque_cost_y_0_fun_jac_ut_xt.c  fr_leg_torque_cost_y_0_hess.c  fr_leg_torque_cost_y_fun.c  fr_leg_torque_cost_y_fun_jac_ut_xt.c  fr_leg_torque_cost_y_hess.c
include/c_generated_code_leg/fr_leg_torque_model/: fr_leg_torque_expl_ode_fun.c  fr_leg_torque_expl_ode_hess.c  fr_leg_torque_expl_vde_adj.c  fr_leg_torque_expl_vde_forw.c  fr_leg_torque_model.h
launch/: full_wbc.launch  mpc.launch  plot.launch  wbc.launch  wbc_ROBOT.launch
msg/: mpc_status.msg  phase.msg
scripts/: degree_pub.py  record.sh
src/: mpc_controller_node.cpp  mpc_controller_node_working_version.cpp  test_node.cpp  test_node_SRBD.cpp  test_node_torque.cpp  wbc_controller_node.cpp
